--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-SHOPIFY_API_KEY="YOUR_SHOPIFY_API_KEY"
-SHOPIFY_API_SECRET="YOUR_SHOPIFY_SECRET"
-HOST="YOUR_TUNNEL_URL"
-SHOP="my-shop-name.myshopify.com"
-SCOPES=read_products
+SHOPIFY_API_KEY=dbb2b5f2f38753c3724a8b534182e2d8
+SHOPIFY_API_SECRET=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
+SHOP=mgs-testing.myshopify.com
+SCOPES=write_products,write_customers,write_draft_orders
+HOST=https://8235cf20c428.ngrok.io
